--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,8 @@ body {
     height: 50px;
 }
 
+.m-l-10 {margin-left: 10px;}
+
 
 /* preloader
 ==================================================*/
