--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ font-family: 'Open Sans', sans-serif;
 /* typography
 ==================================================*/
 
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+  }
+
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 80px;
@@ -231,6 +241,10 @@ header {
     transition: all .5s;
     height: 65px;
 }
+
+nav {max-width:100%;
+    margin: 0 auto!important;
+    }
 
 nav ul {
     display: inline-block;
