--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ a.active {
     background: url(../img/home-bg-2.jpg);
     background-size: cover;
     height: 100vh;
+    background-position: center center!important;
 }
 
 .table-cell {
@@ -310,6 +311,7 @@ a.active {
 .disply-table {
     display: table;
     height: 100vh;
+
 }
 
 
