--- a/css/style.css
+++ b/css/style.css
@@ -812,6 +812,7 @@ fieldset {
 @media (max-width: 420px) {
     nav li {
         margin: 6px;
+        line-height: 10px;
     }
     nav li a {
         font-size: 10px;
